[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/map/DoorIcon.png" type="Texture" id=1]
[ext_resource path="res://scenes/map/ExitLevel.gd" type="Script" id=2]
[ext_resource path="res://scenes/map/DoorIconHover.png" type="Texture" id=3]

[node name="ExitLevel" type="Node2D"]
script = ExtResource( 2 )
sprite_default = ExtResource( 1 )
sprite_hover = ExtResource( 3 )

[node name="Sprite" type="TextureRect" parent="."]
margin_left = -53.4152
margin_top = -40.6761
margin_right = 202.585
margin_bottom = 215.324
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Sprite" to="." method="_on_click_button"]
[connection signal="mouse_entered" from="Sprite" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Sprite" to="." method="_on_mouse_exited"]
